# pretix-taler

./: .gitlab-ci.yml  .update-locales.sh  LICENSE  MANIFEST.in  Makefile  README.rst  pretixplugin.toml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: style.yml  tests.yml
pretix_taler/: __init__.py  apps.py  models.py  payment.py  signals.py  urls.py  views.py
pretix_taler/migrations/: 0001_initial.py
pretix_taler/static/pretix_taler/: check.js
pretix_taler/templates/pretix_taler/: checkout_confirm_render.html  control.html  pay.html  pending.html
